# fake_mapping

./: CMakeLists.txt  README.md  package.xml
include/local_btmap/: localmap_from_bt.hpp
src/: localmap_from_bt.cpp  main.cpp
